--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.1",
     "ethlint": "^1.2.5",
-    "hardhat": "^2.22.7",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.9",
     "keccak256": "^1.0.6",
@@ -92,7 +91,8 @@
     "surya": "^0.4.11"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "5.2.0",
-    "@openzeppelin/contracts-upgradeable": "5.2.0"
+    "@openzeppelin/contracts": "5.3.0",
+    "@openzeppelin/contracts-upgradeable": "5.3.0",
+    "hardhat": "^2.24.0"
   }
 }
