Add CMTAT Base Generic with ERC-721 Mock + rename ValidationModule

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "test:proxy": "npx hardhat test test/proxy/general/factory/Beacon.test.js test/proxy/general/factory/Transparent.test.js test/proxy/general/factory/TransparentSalt.test.js test/proxy/general/Proxy.test.js test/proxy/general/UpgradeProxy.test.js test/proxy/general/UpgradeProxyUUPS.test.js",
     "test:deployment": "npx hardhat test test/deployment/deployment.test.js test/deployment/deploymentERC1363Proxy.test.js test/deployment/deploymentERC1363ProxyValidation.test.js test/deployment/deploymentERC1363Standalone.test.js",
     "test:deployment-light": "npx hardhat test test/deployment/deploymentStandaloneLight.test.js test/deployment/deploymentUpgradeableLight.test.js",
+    "test:deployment-erc721": "npx hardhat test test/deployment/erc721mock.test.js",
     "test:document": "npx hardhat test test/standard/modules/DocumentModule/DocumentModule.test.js test/standard/modules/DocumentModule/DocumentModuleConstructor.test.js test/proxy/modules/DocumentModule/DocumentModule.test.js test/proxy/modules/DocumentModule/DocumentModuleConstructor.test.js",
     "test:debt": "npx hardhat test test/standard/modules/DebtModule/DebtModule.test.js test/standard/modules/DebtModule/DebtModuleConstructor.test.js test/proxy/modules/DebtModule/DebtModule.test.js test/proxy/modules/DebtModule/DebtModuleConstructor.test.js",
     "test:erc20Enforcement": "npx hardhat test test/standard/modules/ERC20EnforcementModule.test.js test/proxy/modules/ERC20EnforcementModule.test.js"
