--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "test:deployment-light": "npx hardhat test test/deployment/light/deploymentStandaloneLight.test.js test/deployment/light/deploymentUpgradeableLight.test.js",
     "test:deployment-erc721": "npx hardhat test test/deployment/erc721mock.test.js",
     "test:deployment-debt": "npx hardhat test test/deployment/debt/deploymentStandaloneDebt.test.js test/deployment/debt/deploymentUpgradeableDebt.test.js",
-    "test:deployment-whitelist": "npx hardhat test test/deployment/whitelist/deploymentStandaloneWhitelist.test.js test/deployment/whitelist/deploymentUpgradeableWhitelist.test.js",
+    "test:deployment-allowlist": "npx hardhat test test/deployment/allowlist/deploymentStandaloneAllowlist.test.js test/deployment/allowlist/deploymentUpgradeableAllowlist.test.js",
     "test:document": "npx hardhat test test/standard/modules/DocumentModule/DocumentModule.test.js test/standard/modules/DocumentModule/DocumentModuleConstructor.test.js test/proxy/modules/DocumentModule/DocumentModule.test.js test/proxy/modules/DocumentModule/DocumentModuleConstructor.test.js",
     "test:debt": "npx hardhat test test/standard/modules/DebtModule/DebtModule.test.js test/standard/modules/DebtModule/DebtModuleConstructor.test.js test/proxy/modules/DebtModule/DebtModule.test.js test/proxy/modules/DebtModule/DebtModuleConstructor.test.js",
     "test:erc20Enforcement": "npx hardhat test test/standard/modules/ERC20EnforcementModule.test.js test/proxy/modules/ERC20EnforcementModule.test.js"
