--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "test:deployment-light": "npx hardhat test test/deployment/light/deploymentStandaloneLight.test.js test/deployment/light/deploymentUpgradeableLight.test.js",
     "test:deployment-erc721": "npx hardhat test test/deployment/erc721mock.test.js",
     "test:deployment-uups": "npx hardhat test test/deployment/deploymentUpgradeableUUPS.test.js",
+    "test:deployment-uups-manual": "npx hardhat test test/deployment/deploymentUpgradeableUUPSManual.test.js",
     "test:deployment-debt": "npx hardhat test test/deployment/debt/deploymentStandaloneDebt.test.js test/deployment/debt/deploymentUpgradeableDebt.test.js",
     "test:deployment-erc1363": "npx hardhat test test/deployment/ERC1363/deploymentERC1363Proxy.test.js test/deployment/ERC1363/deploymentERC1363ProxyValidation.test.js test/deployment/ERC1363/deploymentERC1363Standalone.test.js",
     "test:deployment-erc7551": "npx hardhat test test/deployment/erc7551/deploymentERC7551Standalone.test.js test/deployment/erc7551/deploymentERC7551Upgradeable.test.js",
