--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test:pause": "npx hardhat test test/standard/modules/PauseModule.test.js test/proxy/modules/PauseModule.test.js",
     "test:validation": "npx hardhat test test/standard/modules/ValidationModule/ValidationModule.test.js test/proxy/modules/ValidationModule/ValidationModule.test.js test/standard/modules/ValidationModule/ValidationModuleConstructor.test.js test/standard/modules/ValidationModule/ValidationModuleSetRuleEngine.test.js",
     "test:authorization": "npx hardhat test test/standard/modules/AuthorizationModule/AuthorizationModule.test.js test/proxy/modules/AuthorizationModule/AuthorizationModule.test.js",
-    "test:snapshot": "npx hardhat test test/standard/modules/SnapshotModule/SnapshotModule.test.js test/standard/modules/SnapshotModule/SnapshotModuleConstructor.test.js test/proxy/modules/SnapshotModule/SnapshotModule.test.js test/proxy/modules/SnapshotModule/SnapshotModuleConstructor.test.js",
+    "test:snapshot": "npx hardhat test test/standard/modules/SnapshotModule/SnapshotModule.test.js test/standard/modules/SnapshotModule/SnapshotModuleConstructor.test.js test/proxy/modules/SnapshotModule/SnapshotModule.test.js",
     "test:enforcement": "npx hardhat test test/standard/modules/EnforcementModule.test.js test/proxy/modules/EnforcementModule.test.js",
     "test:erc20CrossChain": "npx hardhat test test/standard/modules/ERC20CrossChainModule.test.js test/proxy/modules/ERC20CrossChainModule.test.js",
     "test:metaTx": "npx hardhat test test/standard/modules/MetaTxModule.test.js test/proxy/modules/MetaTxModule.test.js",
