--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   },
   "homepage": "https://github.com/CMTA/CMTAT",
   "devDependencies": {
+    "@fixdescriptorkit/ts-sdk": "^1.0.1",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
     "@openzeppelin/hardhat-upgrades": "^3.2.0",
@@ -81,6 +82,7 @@
     "hardhat-gas-reporter": "^1.0.9",
     "keccak256": "^1.0.6",
     "npm": "^10.2.5",
+    "patch-package": "^8.0.1",
     "prettier": "^2.8.7",
     "prettier-plugin-solidity": "^1.1.3",
     "sol2uml": "^2.5.20",
@@ -92,6 +94,7 @@
     "surya": "^0.4.11"
   },
   "dependencies": {
+    "@fixdescriptorkit/contracts": "^1.0.0",
     "@openzeppelin/contracts": "5.4.0",
     "@openzeppelin/contracts-upgradeable": "5.4.0",
     "hardhat": "^2.24.0"
