--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "test:deployment-erc7551": "npx hardhat test test/deployment/erc7551/deploymentERC7551Standalone.test.js test/deployment/erc7551/deploymentERC7551Upgradeable.test.js",
     "test:deployment-allowlist": "npx hardhat test test/deployment/allowlist/deploymentStandaloneAllowlist.test.js test/deployment/allowlist/deploymentUpgradeableAllowlist.test.js test/deployment/allowlist/deploymentStandaloneDisableAllowlist.test.js",
     "test:document": "npx hardhat test test/standard/modules/DocumentModule/DocumentModule.test.js test/standard/modules/DocumentModule/DocumentModuleConstructor.test.js test/proxy/modules/DocumentModule/DocumentModule.test.js test/proxy/modules/DocumentModule/DocumentModuleConstructor.test.js",
-    "test:debt": "npx hardhat test test/standard/modules/DebtModule/DebtModule.test.js test/standard/modules/DebtModule/DebtModuleConstructor.test.js test/proxy/modules/DebtModule/DebtModule.test.js test/proxy/modules/DebtModule/DebtModuleConstructor.test.js",
+    "test:deployment-debtEngine": "npx hardhat test test/deployment/debtEngine/deploymentStandaloneDebtEngine.test.js test/deployment/debtEngine/deploymentUpgradeableDebtEngine.test.js",
     "test:erc20Enforcement": "npx hardhat test test/standard/modules/ERC20EnforcementModule.test.js test/proxy/modules/ERC20EnforcementModule.test.js"
   },
   "repository": {
